tests/NormalTests/paczka1/small_fuzzy/67973971.err
Error in line 12: yCw A899 59,4
Error in line 6: hxK6SP5MwW A125 81,6
